Add ‘categories’ to Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name          = "rgb_derivation"
 description   = "Routines for calculation XYZ-RGB conversion matrices from white point and primaries"
 version       = "0.1.1"
 readme        = "README.md"
+categories    = ["graphics", "multimedia::images", "multimedia::video"]
 keywords      = ["rgb", "xyz", "color", "srgb"]
 authors       = ["Michal Nazarewicz <mina86@mina86.com>"]
 license       = "LGPL-3.0-or-later"
