--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name          = "rgb_derivation"
 description   = "Routines for calculation XYZ-RGB conversion matrices from white point and primaries"
-version       = "0.2.2"
+version       = "0.2.3"
 readme        = "README.md"
 categories    = ["graphics", "multimedia::images", "multimedia::video"]
 keywords      = ["rgb", "xyz", "color", "srgb"]
 authors       = ["Michal Nazarewicz <mina86@mina86.com>"]
 license       = "LGPL-3.0-or-later"
-repository    = "https://github.com/mina86/rgb_derivation"
+repository    = "https://codeberg.org/mina86/rgb_derivation"
 documentation = "https://docs.rs/rgb_derivation"
 edition       = "2021"
 
